implemented the rest of the endpoints and fix test rate limiting issues